<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/logo_bg"
    tools:context="com.example.mindinfo_android.assemblyapp.p.activities.RegistrationActivity">

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <include layout="@layout/toolbar" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:fillViewport="true">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <LinearLayout
                android:id="@+id/mainvoterdetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/hof_nameTV"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:backgroundTint="@color/colorGreenPrimary"
                    android:fontFamily="@font/estre"
                    android:hint="Head of Family Name"
                    android:imeOptions="actionNext"
                    android:singleLine="true"
                    android:textColor="@color/colorOrangePrimary"
                    android:textColorHint="@color/colorOrangePrimary" />

                <EditText
                    android:id="@+id/numbrTV"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:backgroundTint="@color/colorGreenPrimary"
                    android:fontFamily="@font/estre"
                    android:hint="Total Voters"
                    android:imeOptions="actionNext"
                    android:maxLength="2"
                    android:singleLine="true"
                    android:textColor="@color/colorOrangePrimary"
                    android:textColorHint="@color/colorOrangePrimary" />

                <EditText
                    android:id="@+id/main_phoneET"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:backgroundTint="@color/colorGreenPrimary"
                    android:fontFamily="@font/estre"
                    android:hint="@string/phone_number"
                    android:imeOptions="actionNext"
                    android:singleLine="true"
                    android:textColor="@color/colorOrangePrimary"
                    android:textColorHint="@color/colorOrangePrimary" />

                <EditText
                    android:id="@+id/emailidET"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:backgroundTint="@color/colorGreenPrimary"
                    android:fontFamily="@font/estre"
                    android:hint="@string/email_id"
                    android:imeOptions="actionNext"
                    android:singleLine="true"
                    android:textColor="@color/colorOrangePrimary"
                    android:textColorHint="@color/colorOrangePrimary" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/estre"
                    android:text="Family Details"
                    android:textColor="@color/colorGreenPrimary"
                    android:textSize="22sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:visibility="gone"
                android:layout_below="@id/mainvoterdetails"
                android:id="@+id/family_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ListView
                    android:id="@+id/listview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:scrollbars="none"
             />
            </LinearLayout>

            <LinearLayout
                android:layout_below="@id/family_details"
                android:id="@+id/bottomlay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/kotamemberET"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="@color/colorGreenPrimary"
                    android:fontFamily="@font/estre"
                    android:hint="@string/member_living_in_kota"
                    android:imeOptions="actionNext"
                    android:singleLine="true"
                    android:textColor="@color/colorOrangePrimary"
                    android:textColorHint="@color/colorOrangePrimary" />

                <EditText
                    android:id="@+id/othercityET"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:backgroundTint="@color/colorGreenPrimary"
                    android:fontFamily="@font/estre"
                    android:hint="Voter in Other City"
                    android:imeOptions="actionNext"
                    android:singleLine="true"
                    android:textColor="@color/colorOrangePrimary"
                    android:textColorHint="@color/colorOrangePrimary" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:drawableLeft="@drawable/attach_icon"
                    android:fontFamily="@font/estre"
                    android:text=" Attach Picture "
                    android:textColor="@color/colorGreenPrimary"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/gray" />

                <Button
                    android:id="@+id/submit_btn"
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:layout_alignParentBottom="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/submit_btn"
                    android:fontFamily="@font/estre"
                    android:text="Submit"
                    android:textColor="@color/white" />
            </LinearLayout>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>